@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2246 2003/05/16 18:13:12 magick Exp $
+$NetBSD: CHANGES,v 1.2247 2003/05/16 21:27:54 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -1971,3 +1971,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated aewm++ to 1.0.24 [salo 2003-05-16]
 	Added yaz-2.0 [dmcmahill 2003-05-16]
 	Updated xemacs-current to 21.5.13 [magick 2003-05-16]
+	Updated opera7 to 7.11beta2 [jdolecek 2003-05-16]
